force-app/main/default/objects/SalesAgreement/fields/Average_Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>Average_Product_Discount__c</fullName>
    <description>Average Product Discount. Utilizing Sum of Discount and Total Number of Products</description>
    <formula>Sum_of_Discount__c  /  Total_Number_of_Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Product Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>