force-app/main/default/objects/SalesAgreement/fields/Is_Primary_Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Sales_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Sales Agreement?</label>
    <type>Checkbox</type>
</CustomField>