force-app/main/default/objects/SalesAgreement/fields/PreviousID__c.field-meta.xml
<CustomField>
    <fullName>PreviousID__c</fullName>
    <label>PreviousID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>