force-app/main/default/objects/SalesAgreement/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Quote that this Sales Agreement is related to.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Sales Agreements</relationshipLabel>
    <relationshipName>Sales_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>