force-app/main/default/objects/SalesAgreement/fields/Sum_of_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Discount__c</fullName>
    <description>This field is used a part of an equation to get the average discount of Products on the Sales Agreement. We will use this as criteria for a Sales Agreement Approval. Also creating a Total Number Of Products field as the other part of the equation.</description>
    <label>Sum of Discount</label>
    <summarizedField>SalesAgreementProduct.DiscountPercentage</summarizedField>
    <summaryForeignKey>SalesAgreementProduct.SalesAgreementId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>