force-app/main/default/objects/SalesAgreement/fields/Total_Number_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Products__c</fullName>
    <description>This field is used a part of an equation to get the average discount of Products on the Sales Agreement. We will use this as criteria for a Sales Agreement Approval. Also creating a Sum_of_Discount field as the other part of the equation.</description>
    <label>Total Number of Products</label>
    <summaryForeignKey>SalesAgreementProduct.SalesAgreementId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>